--- a/res/layout/contact_choose_list.xml
+++ b/res/layout/contact_choose_list.xml
@@ -58,7 +58,7 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/btn_list_item_bg"
         android:layout_gravity="center_vertical"
         >
@@ -70,17 +70,15 @@
             android:textColor="@color/text_normal"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="20dp"
-            android:gravity="center|center_vertical"
-            android:layout_marginTop="20dp"
+            android:padding="10dp"
             />
          <TextView
             android:id="@+id/tv_contacts_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="张三"
+            android:text=""
             android:textColor="@color/text_normal"
-            android:gravity="center|center_vertical"
-            android:layout_marginTop="20dp"
+          	 android:padding="10dp"
             android:layout_toRightOf="@id/tv_tag"
             />
       </RelativeLayout>
