--- a/res/layout/layout_contactslist.xml
+++ b/res/layout/layout_contactslist.xml
@@ -56,7 +56,7 @@
         
     </RelativeLayout>
 
-    <ListView
+  <!--   <ListView
         android:id="@+id/android:list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -64,6 +64,15 @@
         android:layout_marginRight="10dip"
         android:layout_marginTop="10dip"
         android:layout_weight="1.0" >
+    </ListView> -->
+   <ListView
+        android:id="@+id/lv_contact_listview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="10dip"
+        android:layout_marginTop="10dip"
+        android:layout_weight="1.0" >
     </ListView>
-
+    
 </LinearLayout>
