--- a/res/layout/index_1.xml
+++ b/res/layout/index_1.xml
@@ -10,11 +10,129 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </com.meijialife.simi.ui.CollapseCalendarView>
+    
+    <LinearLayout
+        android:id="@+id/ll_gallery"
+        android:layout_below="@id/layout_calendar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+         <com.meijialife.simi.ui.MyGallery
+            android:id="@+id/gallery"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="9" />
+
+        <LinearLayout
+            android:id="@+id/ll_bottomNavPoint"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="top|center"
+            android:layout_weight="0.5"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone"
+             >
+
+            <LinearLayout
+                android:id="@+id/ll_focus_indicator_container"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal" />
+        </LinearLayout>
+    </LinearLayout>
+   
+    
+    
+    	<!-- <LinearLayout
+    	 android:id="@+id/ll_ad"
+  	    android:layout_width="match_parent"
+  	    android:layout_height="wrap_content"
+  	    android:orientation="vertical"
+  	    android:layout_below="@id/layout_calendar"
+  	    >
+  	    <LinearLayout
+  	        android:layout_width="match_parent"
+  	        android:layout_height="wrap_content"
+  	        android:orientation="horizontal"
+  	        >
+  	    <ImageView
+  	        android:id="@+id/iv_ad_icon"
+  	        android:layout_width="match_parent"
+  	        android:layout_height="150dp"
+  	        android:src="@drawable/ad_cwkj"
+  	        android:scaleType="fitXY"
+  	        />
+  	    <TextView
+  	        android:id="@+id/tv_goto_type"
+  	        android:layout_width="wrap_content"
+  	        android:layout_height="wrap_content"
+  	        android:visibility="gone"
+  	        />
+  	        <TextView
+  	        android:id="@+id/tv_goto_url"
+  	        android:layout_width="wrap_content"
+  	        android:layout_height="wrap_content"
+  	        android:visibility="gone"
+  	        />
+  	        <TextView
+  	        android:id="@+id/tv_service_type_ids"
+  	        android:layout_width="wrap_content"
+  	        android:layout_height="wrap_content"
+  	        android:visibility="gone"
+  	        />
+  	    </LinearLayout>
+      <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#e1e1e1" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:layout_weight="4"
+        android:background="@color/title_background_color"
+         >
+  	    <RelativeLayout
+  	        android:layout_width="wrap_content"
+  	        android:layout_height="wrap_content"
+  	        android:layout_weight="3"
+  	        >
+			<TextView
+			    android:id="@+id/tv_ad_des"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:text="让您的企业'一键拥有'强大的人事团体"
+			    android:singleLine="true"
+			    android:ellipsize="end"
+			    />
+  	    </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" >
+            <TextView
+                android:id="@+id/tv_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:drawableLeft="@drawable/common_icon_share"
+                android:drawablePadding="5dp"
+                android:gravity="center"
+                android:textColor="#676767" />
+        </RelativeLayout>
+    </LinearLayout>
+    </LinearLayout> -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/layout_calendar"
+        android:layout_below="@id/ll_gallery"
         android:background="@color/activity_bg_color"
         android:orientation="vertical" >
         
